--- a/FullStack-UI/src/app/components/employees/edit-employee/edit-employee.component.html
+++ b/FullStack-UI/src/app/components/employees/edit-employee/edit-employee.component.html
@@ -1,16 +1,24 @@
 <app-container>
-    <h1 ngClass="mt-8 mb-12 text-3xl">Add New Employee</h1>
+    <h1 ngClass="mt-8 mb-12 text-3xl">Edit Employee</h1>
 
-    <form #form="ngForm" (ngSubmit)="addEmployee()" ngClass="flex flex-col gap-4 max-w-md">
+    <form #form="ngForm" (ngSubmit)="updateEmployee()" ngClass="flex flex-col gap-4 max-w-md">
+        <input
+            type="hidden"
+            readonly disabled
+            [(ngModel)]="employeeDetails.id"
+            [value]="employeeDetails.id"
+            name="id"
+            id="id"
+            required
+            ngClass="disabled:select-none px-2 py-1 bg-slate-700"
+            placeholder="id">
         <div ngClass="flex flex-col gap-0.5">
             <label for="profile"></label>
             <div ngClass="flex gap-2">
-                <img ngClass="object-cover w-10 h-10 rounded-full"
-                    [src]="addEmployeeRequest.profile"
-                    [alt]="addEmployeeRequest.fullName">
+                <img ngClass="object-cover w-10 h-10 rounded-full" [src]="employeeDetails.profile" [alt]="employeeDetails.fullName">
                 <input
                 type="url"
-                [(ngModel)]="addEmployeeRequest.profile"
+                [(ngModel)]="employeeDetails.profile"
                 name="profile"
                 id="profile"
                 required
@@ -23,7 +31,7 @@
             <label for="fullName"></label>
             <input
                 type="text"
-                [(ngModel)]="addEmployeeRequest.fullName"
+                [(ngModel)]="employeeDetails.fullName"
                 name="fullName"
                 id="fullName"
                 required
@@ -35,7 +43,7 @@
             <label for="email"></label>
             <input
                 type="email"
-                [(ngModel)]="addEmployeeRequest.email"
+                [(ngModel)]="employeeDetails.email"
                 name="email"
                 id="email"
                 required
@@ -47,7 +55,7 @@
             <label for="phone"></label>
             <input
                 type="tel"
-                [(ngModel)]="addEmployeeRequest.phone"
+                [(ngModel)]="employeeDetails.phone"
                 name="phone"
                 id="phone"
                 required
@@ -59,7 +67,7 @@
             <label for="salary"></label>
             <input
                 type="number"
-                [(ngModel)]="addEmployeeRequest.salary"
+                [(ngModel)]="employeeDetails.salary"
                 name="salary"
                 id="salary"
                 required
@@ -71,7 +79,7 @@
             <label for="department"></label>
             <input
                 type="text"
-                [(ngModel)]="addEmployeeRequest.department"
+                [(ngModel)]="employeeDetails.department"
                 name="department"
                 id="department"
                 required
@@ -79,11 +87,27 @@
                 placeholder="Department">
             <span ngClass="text-red-500"></span>
         </div>
-        <div ngClass="flex flex-col gap-0.5">
+        <div ngClass="flex gap-0.5">
             <input
-                type="submit"
-                value="add"
-                ngClass="bg-slate-500 px-2 py-1 hover:bg-opacity-70 cursor-pointer">
+                type="button"
+                value="Delete"
+                (click)="openModal(dialog)"
+                ngClass="w-full bg-red-500 px-2 py-1 hover:bg-opacity-70 cursor-pointer">
+            <input
+                type="submit" value="update"
+                ngClass="w-full bg-slate-500 px-2 py-1 hover:bg-opacity-70 cursor-pointer">
         </div>
     </form>
+    <dialog #dialog title="Delete User" ngClass="backdrop:bg-slate-950 backdrop:bg-opacity-10 backdrop:backdrop-blur-md bg-slate-950 max-w-md w-full rounded px-4 py-3 text-center">
+        <h3 ngClass="text-center font-bold text-slate-500">Confirm Delete Employee</h3>
+        <hr ngClass="border-slate-500">
+          <form method="dialog" ngClass="pt-2">
+            <p>Are you sure you want to delete ({{employeeDetails.fullName }})</p>
+            <span class="text-red-500">cannot redo</span>
+            <div class="flex justify-end gap-2">
+              <button (click)="deleteEmployee(dialog)" ngClass="bg-red-600 px-2 py-1 rounded border border-transparent hover:bg-transparent hover:border-red-600 transition-all duration-700 ease-in-out">Confirm</button>
+              <button (click)="dialog.close()" ngClass="bg-teal-600 px-2 py-1 rounded border border-transparent hover:bg-transparent hover:border-teal-600 transition-all duration-700 ease-in-out">Cancel</button>
+            </div>
+          </form>
+      </dialog>
 </app-container>
