--- a/FullStack-UI/src/app/components/navbar/navbar.component.html
+++ b/FullStack-UI/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,14 @@
 <header ngClass="bg-slate-800 bg-opacity-70 backdrop-blur-sm">
     <app-container>
-        <nav ngClass="flex gap-[30%] py-4">
+        <nav ngClass="flex gap-8 py-4">
             <a routerLink="/">FullStack UI</a>
             <ul ngClass="flex gap-3">
                 <li>
                     <a
-                    routerLink="/employees"
+                    [routerLink]="['employees']"
+                    routerLinkActive="router-link-active"
                     routerLinkActive="text-teal-700 font-bold transition-colors duration-700 ease-in-out"
                     [routerLinkActiveOptions]="{exact: true}">Employees</a>
-                </li>
-                <li>
-                    <a
-                    routerLink="/employees/add"
-                    routerLinkActive="text-teal-700 font-bold transition-colors duration-700 ease-in-out"
-                    [routerLinkActiveOptions]="{exact: true}">Add Employee</a>
                 </li>
             </ul>
         </nav>
