--- a/FullStack-UI/src/app/components/home/home.component.html
+++ b/FullStack-UI/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<app-container>
-    <p>home works!</p>
+<app-container class="py-12">
+    <p>home works!, for more go to employee</p>
 </app-container>
